--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-I Love You!
+<!DOCTYPE HTML>
+<!--
+	Aerial by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Suraj Tarani</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+		<div id="wrapper">
+			<div id="bg"></div>
+			<div id="overlay"></div>
+			<div id="main">
+
+				<!-- Header -->
+					<header id="header">
+						<h1>Suraj Tarani</h1>
+						<p>&nbsp;&bull;&nbsp; Namastey &nbsp;&bull;</p>
+						<nav>
+							<ul>
+								<li><a href="https://www.instagram.com/photosaurus.lab/" class="icon brands fa-twitter"><span class="label">Instagram</span></a></li>
+								<li><a href="facebook.com/suraj.tarani" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.instagram.com/surajtarani/" class="icon brands fa-dribbble"><span class="label">Instagram</span></a></li>
+								<li><a href="github.com/surajtarani" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="mailto:surajtarani94@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							</ul>
+						</nav>
+					</header>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<span class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>.</span>
+					</footer>
+
+			</div>
+		</div>
+		<script>
+			window.onload = function() { document.body.classList.remove('is-preload'); }
+			window.ontouchmove = function() { return false; }
+			window.onorientationchange = function() { document.body.scrollTop = 0; }
+		</script>
+	</body>
+</html>
