html5up template used, added assets

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 						<p>&nbsp;&bull;&nbsp; Namastey &nbsp;&bull;</p>
 						<nav>
 							<ul>
-								<li><a href="https://www.instagram.com/photosaurus.lab/" class="icon brands fa-twitter"><span class="label">Instagram</span></a></li>
-								<li><a href="facebook.com/suraj.tarani" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="https://www.instagram.com/surajtarani/" class="icon brands fa-dribbble"><span class="label">Instagram</span></a></li>
-								<li><a href="github.com/surajtarani" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://www.instagram.com/photosaurus.lab/" class="fab fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.facebook.com/suraj.tarani" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.instagram.com/surajtarani/" class="fab fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.github.com/surajtarani" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<li><a href="mailto:surajtarani94@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
