customization - bg, links, footer

--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Aerial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Suraj Tarani</title>
@@ -15,7 +11,7 @@
 	<body class="is-preload">
 		<div id="wrapper">
 			<div id="bg"></div>
-			<div id="overlay"></div>
+			<!-- <div id="overlay"></div> -->
 			<div id="main">
 
 				<!-- Header -->
@@ -24,18 +20,35 @@
 						<p>&nbsp;&bull;&nbsp; Namastey &nbsp;&bull;</p>
 						<nav>
 							<ul>
-								<li><a href="https://www.instagram.com/photosaurus.lab/" class="fab fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://www.facebook.com/suraj.tarani" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="https://www.instagram.com/surajtarani/" class="fab fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://www.github.com/surajtarani" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="mailto:surajtarani94@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<div class="tooltip">
+									<li><a href="https://www.instagram.com/photosaurus.lab/" class="fab fa-instagram"><span class="label">Instagram</span></a></li>
+									<span class="tooltiptext">Photography Account</span>
+								</div>
+								<div class="tooltip">
+									<li><a href="https://linktr.ee/surajtarani" class="fas fa-link"><span class="label">Linktree</span></a></li>
+									<span class="tooltiptext">Linktree</span>
+								</div>
+								<div class="tooltip">
+									<li ><a id="callout" href="https://drive.google.com/drive/folders/1l7Dq9VwhZ2m3Jv67zlN18KA7293v75gQ?usp=sharing" class="fas fa-film"><span class="label">Linktree Videos</span></a></li>
+									<span class="tooltiptext">Psst! <br> Video Work over here.</span>
+								</div>
+								<div class="tooltip">
+									<li><a href="https://surajtarani.github.io/resume/" class="icon brands fa-github"><span class="label">Github - Tech Skills</span></a></li>
+									<span class="tooltiptext">Tech Skills</span>
+								</div>
+								<div class="tooltip">
+									<li><a href="mailto:surajtarani94@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+									<span class="tooltiptext">Ping me!</span>
+								</div>
+								
+								
 							</ul>
 						</nav>
 					</header>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>.</span>
+						<!-- <span class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>.</span> -->
 					</footer>
 
 			</div>
